src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.app-container {
  height: 100%;
}

.full-height {
  height: 100vh;
}

.full-height-percentage{
  height: 100%;
}
.three-quarters-height-percentage {
  height: 75%;
}

.menu-message-header {
  background-color: white;
  color: black;
}

.bill-card-button-spacing {
  padding-right: 2vw;
}

.profile-avatar {
 font-size: 15em;
}

